# smarty-pants

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: daemon_cmd.rs  main.rs  status.rs  trigger.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  paths.rs  protocol.rs
crates/core/tests/: config_sample.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: inject.rs  language.rs  lib.rs  llm.rs  main.rs  model_download.rs  pipeline.rs  prompt.rs  selection.rs  server.rs  shortcuts.rs  wayland.rs
crates/daemon/src/snapshots/: smarty_pants_daemon__prompt__tests__chatml_snapshot.snap  smarty_pants_daemon__prompt__tests__chatml_with_language_snapshot.snap  smarty_pants_daemon__prompt__tests__gemma_snapshot.snap  smarty_pants_daemon__prompt__tests__gemma_with_language_snapshot.snap
crates/daemon/tests/: e2e_socket_path.rs
docs/superpowers/plans/: 2026-05-29-smarty-pants-phase1.md
docs/superpowers/specs/: 2026-05-29-smarty-pants-design.md
examples/: config.toml  rewrite_prompt.txt
examples/prompts/: academic.txt  linkedin.txt
packaging/systemd/: smarty-pants.service
