[workspace]
resolver = "2"
members  = ["crates/core", "crates/daemon", "crates/cli"]

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "MPL-2.0"
repository = "https://github.com/thbertoldi/smarty-pants"
rust-version = "1.75"

[workspace.dependencies]
anyhow              = "1"
thiserror           = "1"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
toml                = "0.8"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
tokio               = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal", "time", "process"] }
tokio-util          = { version = "0.7", features = ["codec"] }
clap                = { version = "4", features = ["derive"] }
directories         = "5"
futures             = "0.3"
async-trait         = "0.1"
