[package]
name         = "smarty-pants-cli"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[[bin]]
name = "smarty-pants"
path = "src/main.rs"

[dependencies]
smarty-pants-core   = { path = "../core" }
anyhow              = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tokio               = { workspace = true }
clap                = { workspace = true }
which               = "6"
