[package]
name         = "smarty-pants-daemon"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[[bin]]
name = "smarty-pants-daemon"
path = "src/main.rs"

[features]
# Vulkan is the default acceleration backend, declared empty here until
# T12 wires llama-cpp-2 in and gives it the real feature dependency.
default    = []
live-model = []

[dependencies]
smarty-pants-core   = { path = "../core" }
anyhow              = { workspace = true }
thiserror           = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
tokio               = { workspace = true }
tokio-util          = { workspace = true }
futures             = { workspace = true }
async-trait         = { workspace = true }
directories         = { workspace = true }

reqwest             = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2                = "0.10"
hex                 = "0.4"

[dev-dependencies]
insta               = "1"
tempfile            = "3"
