[package]
name         = "smarty-pants-daemon"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lib]
name = "smarty_pants_daemon"
path = "src/lib.rs"

[[bin]]
name = "smarty-pants-daemon"
path = "src/main.rs"

[features]
default     = ["vulkan"]
vulkan      = ["llama-cpp-2/vulkan"]
cuda        = ["llama-cpp-2/cuda"]
rocm        = ["llama-cpp-2/rocm"]
live-model  = []

[dependencies]
smarty-pants-core   = { path = "../core" }
anyhow              = { workspace = true }
thiserror           = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
tokio               = { workspace = true }
tokio-util          = { workspace = true }
futures             = { workspace = true }
async-trait         = { workspace = true }
directories         = { workspace = true }
wl-clipboard-rs     = "0.9"
ashpd               = { version = "0.13", default-features = false, features = ["tokio", "global_shortcuts"] }

reqwest             = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2                = "0.10"
hex                 = "0.4"

llama-cpp-2         = { version = "0.1", default-features = false }
encoding_rs         = "0.8"
which               = "6"
whatlang            = "0.16"

[dev-dependencies]
insta               = "1"
tempfile            = "3"
